feat: add product video feature