@@ -18,6 +18,8 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.sql.Timestamp;
 import java.util.List;
+import java.util.Map;
+import java.util.Objects;
 import java.util.Set;
 import java.util.UUID;
 import java.util.stream.Collectors;
@@ -69,6 +71,48 @@ public class ProductVideoService {
             .collect(Collectors.toList());
     }
 
+    public List<ProductVideoSummaryDTO> getVideoSummaryByProduct(int page, int size) {
+        Pageable pageable = Pageable.ofSize(size).withPage(page);
+        Page<Object[]> results = videoRepository.findVideoSummaryByProduct(pageable);
+        return results.getContent().stream()
+            .map(row -> new ProductVideoSummaryDTO(
+                (UUID) row[0],
+                (String) row[1],
+                ((Number) row[2]).intValue(),
+                row[3] != null ? ((Timestamp) row[3]).toLocalDateTime() : null
+            ))
+            .collect(Collectors.toList());
+    }
+
+    public List<ProductVideoSummaryDTO> getVideoSummaryByProduct(int page, int size, String search) {
+        Pageable pageable = Pageable.ofSize(size).withPage(page);
+        Page<Object[]> results;
+        if (search != null && !search.isBlank()) {
+            results = videoRepository.findVideoSummaryByProductWithSearch(search, pageable);
+        } else {
+            results = videoRepository.findVideoSummaryByProduct(pageable);
+        }
+        return results.getContent().stream()
+            .map(row -> new ProductVideoSummaryDTO(
+                (UUID) row[0],
+                (String) row[1],
+                ((Number) row[2]).intValue(),
+                row[3] != null ? ((Timestamp) row[3]).toLocalDateTime() : null
+            ))
+            .collect(Collectors.toList());
+    }
+
+    public long countVideoSummaryByProduct() {
+        return videoRepository.countVideoSummaryByProduct();
+    }
+
+    public long countVideoSummaryByProduct(String search) {
+        if (search != null && !search.isBlank()) {
+            return videoRepository.countVideoSummaryByProductWithSearch(search);
+        }
+        return videoRepository.countVideoSummaryByProduct();
+    }
+
     public List<ProductVideoDetailDTO> getVideoDetailsByProductId(UUID productId) {
         List<Object[]> results = videoRepository.findVideoDetailsByProductId(productId);
         return results.stream()
@@ -83,6 +127,27 @@ public class ProductVideoService {
                 (String) row[7]
             ))
             .collect(Collectors.toList());
+    }
+
+    public List<ProductVideoDetailDTO> getVideoDetailsByProductId(UUID productId, int page, int size) {
+        Pageable pageable = Pageable.ofSize(size).withPage(page);
+        Page<Object[]> results = videoRepository.findVideoDetailsByProductId(productId, pageable);
+        return results.getContent().stream()
+            .map(row -> new ProductVideoDetailDTO(
+                (UUID) row[0],
+                (String) row[1],
+                (String) row[2],
+                (String) row[3],
+                (String) row[4],
+                row[5] != null ? ((Number) row[5]).intValue() : null,
+                row[6] != null ? ((Timestamp) row[6]).toLocalDateTime() : null,
+                (String) row[7]
+            ))
+            .collect(Collectors.toList());
+    }
+
+    public long countVideoDetailsByProductId(UUID productId) {
+        return videoRepository.countVideoDetailsByProductId(productId);
     }
 
     @Transactional
@@ -189,10 +254,15 @@ public class ProductVideoService {
             .map(ProductVideoMapping::getProductId)
             .collect(Collectors.toList());
 
+        Map<UUID, String> productNameMap = productIds.isEmpty()
+            ? Map.of()
+            : productRepository.findAllById(productIds).stream()
+                .collect(Collectors.toMap(Product::getId, Product::getName));
+
         List<String> productNames = productIds.stream()
-            .map(pid -> productRepository.findById(pid).map(Product::getName).orElse(null))
-            .filter(name -> name != null)
-            .collect(Collectors.toList());
+            .map(productNameMap::get)
+            .filter(Objects::nonNull)
+            .toList();
 
         String status = (video.getVideoUrl() != null && !video.getVideoUrl().isBlank()) ? "active" : "error";
 
